--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-
   <title>My Portfolio</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
@@ -308,6 +307,16 @@
           </div>
           <div class="col-lg-6">
             <h3 class="resume-title">Professional Experience</h3>
+            <div class="resume-item">
+              <h4>Infolabs</h4>
+              <h5>Skills Used: HTML,CSS,Javascript,PHP,AJAX</h5>
+              <p><em>Duration: 1 Months</em></p>
+              <ul>
+                <li>Designed and developed the truth telling Dashbaord to give accurate data over all across location 
+                  .</li>
+                <li> Adopted   Time Managment , Project Planning  and worked under pressure</li>
+              </ul>
+            </div>
             <div class="resume-item">
               <h4>L & T Defence</h4>
               <h5>Skills Used: Power Bi , SQL , Knime , Python</h5>
